finished duplicates work

--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -1641,3 +1641,18 @@ dd dl.opss-nested-definition-list {
         margin-right: govuk-spacing(1) - 2;
     }
 }
+
+
+
+/*ul#navigation.psd-header__navigation {
+    display: block;
+    margin-left: 0 !important;
+
+    a {
+        font-weight: normal;
+    }
+
+    &[hidden] {
+        display: none;
+    }
+}*/
