--- a/app/views/psd-revised-flow/duplicates/is-this-the-same-product-error-1.html
+++ b/app/views/psd-revised-flow/duplicates/is-this-the-same-product-error-1.html
@@ -105,7 +105,7 @@ href: "do-you-have-the-barcode"
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="correct" name="correct" type="radio" value="yes">
                   <label class="govuk-label govuk-radios__label" for="correct">
-                    Yes &nbsp;&ndash;&nbsp; use this product record for the case
+                    Yes &nbsp;&ndash;&nbsp; use this product record instead
                   </label>
                 </div>
 
