added remove and edit img links

--- a/app/views/psd-revised-flow/inc_tab-prod-imgs-sm-font.html
+++ b/app/views/psd-revised-flow/inc_tab-prod-imgs-sm-font.html
@@ -1,117 +1,150 @@
 <ul class="govuk-list govuk-!-margin-top-6">
-<li>
+    <li>
 
-    <dl class="govuk-summary-list govuk-!-padding-bottom-9 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image opss-summary-list-mixed--sm-font">
-        <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-                Image and title
-            </dt>
-            <dd class="govuk-summary-list__value">
-                
-                <figure>
-                    <a href="../public/images/dishwashing-liquid.jpg" class="govuk-link govuk-link--no-visited-state" target="_blank" title="Opens in a new tab">
-                        <img src="../public/images/dishwashing-liquid.jpg">
-                    </a>
-                    <figcaption>Bottle 500ml size</figcaption>
-                </figure>
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image opss-summary-list-mixed--sm-font">
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Image and title
+                </dt>
+                <dd class="govuk-summary-list__value">
 
-            </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-                Image description
-            </dt>
-            <dd class="govuk-summary-list__value">
-                
+                    <figure>
+                        <a href="../public/images/dishwashing-liquid.jpg" class="govuk-link govuk-link--no-visited-state" target="_blank" title="Opens in a new tab">
+                            <img src="../public/images/dishwashing-liquid.jpg">
+                        </a>
+                        <figcaption>Bottle 500ml size</figcaption>
+                    </figure>
+
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Image description
+                </dt>
+                <dd class="govuk-summary-list__value">
+
                     Lorem ipsum oluta nisi assumenda, aperiam enim dolores labore non fuga. Dolorum rem vel architecto. Aut, maiores quisquam elit.
-                
-            </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-                Updated
-            </dt>
-            <dd class="govuk-summary-list__value">
-                6 June 2022
-            </dd>
-        </div>
-    </dl>
 
-</li>
-<li>          
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Updated
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    6 June 2022
+                </dd>
+            </div>
+        </dl>
 
-    <dl class="govuk-summary-list govuk-!-padding-bottom-9 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image opss-summary-list-mixed--sm-font">
-        <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-                Image and title
-            </dt>
-            <dd class="govuk-summary-list__value">
-                
-                <figure>
-                    <a href="../public/images/asda-window-cleaner.png" class="govuk-link govuk-link--no-visited-state" target="_blank" title="Opens in a new tab">
-                        <img src="../public/images/asda-window-cleaner.png">
-                    </a>
-                    <figcaption>Asda window cleaner</figcaption>                            
-                </figure>
+        <div class="opss-text-align-right govuk-!-margin-bottom-8">
+            <ul class="govuk-list">
+                <li class="govuk-!-display-inline govuk-!-margin-left-2">
+                    <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Edit this image<span class="govuk-visually-hidden">: Bottle 500ml size</span></a>
+                </li>
+                <li class="govuk-!-display-inline govuk-!-margin-left-2">
+                    <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Remove this image<span class="govuk-visually-hidden">: Bottle 500ml size</span></a>
+                </li>
+            </ul>
+        </div>
 
-            </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-                Image description
-            </dt>
-            <dd class="govuk-summary-list__value">
-                
-                Modi quia labore inventore ea temporibus perspiciatis distinctio libero id sapiente consequuntur aliquam ipsa, rem suscipit nihil! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur porro excepturi labore quia vero. Atque aperiam nemo soluta repudiandae assumenda facere a, dignissimos veniam vel ea at nihil esse? Obcaecati!
-                
-            </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-                Updated
-            </dt>
-            <dd class="govuk-summary-list__value">
-                21 August 2022
-            </dd>
-        </div>
-    </dl>
-</li>
-<li>           
+    </li>
+    <li>
 
-    <dl class="govuk-summary-list govuk-!-padding-bottom-9 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image opss-summary-list-mixed--sm-font">
-        <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-                Image and title
-            </dt>
-            <dd class="govuk-summary-list__value">
-                
-                <figure>
-                    <a href="../public/images/asda-wood-floor-cleaner.png" class="govuk-link govuk-link--no-visited-state" target="_blank" title="Opens in a new tab">
-                        <img src="../public/images/asda-wood-floor-cleaner.png">
-                    </a>
-                    <figcaption>Asda wood cleaner</figcaption>
-                </figure>
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image opss-summary-list-mixed--sm-font">
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Image and title
+                </dt>
+                <dd class="govuk-summary-list__value">
 
-            </dd>
+                    <figure>
+                        <a href="../public/images/asda-window-cleaner.png" class="govuk-link govuk-link--no-visited-state" target="_blank" title="Opens in a new tab">
+                            <img src="../public/images/asda-window-cleaner.png">
+                        </a>
+                        <figcaption>Asda window cleaner</figcaption>
+                    </figure>
+
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Image description
+                </dt>
+                <dd class="govuk-summary-list__value">
+
+                    Modi quia labore inventore ea temporibus perspiciatis distinctio libero id sapiente consequuntur aliquam ipsa, rem suscipit nihil! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur porro excepturi labore quia vero. Atque aperiam nemo soluta repudiandae assumenda facere a, dignissimos veniam vel ea at nihil esse? Obcaecati!
+
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Updated
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    21 August 2022
+                </dd>
+            </div>
+        </dl>
+
+        <div class="opss-text-align-right govuk-!-margin-bottom-8">
+            <ul class="govuk-list">
+                <li class="govuk-!-display-inline govuk-!-margin-left-2">
+                    <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Edit this image<span class="govuk-visually-hidden">: Asda window cleaner</span></a>
+                </li>
+                <li class="govuk-!-display-inline govuk-!-margin-left-2">
+                    <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Remove this image<span class="govuk-visually-hidden">: Asda window cleaner</span></a>
+                </li>
+            </ul>
         </div>
-        <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-                Image description
-            </dt>
-            <dd class="govuk-summary-list__value">
-                
-                Ea temporibus perspiciatis distinctio libero id sapiente consequuntur aliquam ipsa, rem suscipit nihil! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur porro excepturi labore quia vero. Atque aperiam nemo soluta repudiandae assumenda facere a, dignissimos veniam vel ea at nihil esse? Obcaecati!
-                
-            </dd>
+    </li>
+    <li>
+
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image opss-summary-list-mixed--sm-font">
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Image and title
+                </dt>
+                <dd class="govuk-summary-list__value">
+
+                    <figure>
+                        <a href="../public/images/asda-wood-floor-cleaner.png" class="govuk-link govuk-link--no-visited-state" target="_blank" title="Opens in a new tab">
+                            <img src="../public/images/asda-wood-floor-cleaner.png">
+                        </a>
+                        <figcaption>Asda wood cleaner</figcaption>
+                    </figure>
+
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Image description
+                </dt>
+                <dd class="govuk-summary-list__value">
+
+                    Ea temporibus perspiciatis distinctio libero id sapiente consequuntur aliquam ipsa, rem suscipit nihil! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur porro excepturi labore quia vero. Atque aperiam nemo soluta repudiandae assumenda facere a, dignissimos veniam vel ea at nihil esse? Obcaecati!
+
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Updated
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    16 May 2022
+                </dd>
+            </div>
+        </dl>
+
+        <div class="opss-text-align-right govuk-!-margin-bottom-8">
+            <ul class="govuk-list">
+                <li class="govuk-!-display-inline govuk-!-margin-left-2">
+                    <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Edit this image<span class="govuk-visually-hidden">: Asda wood cleaner</span></a>
+                </li>
+                <li class="govuk-!-display-inline govuk-!-margin-left-2">
+                    <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Remove this image<span class="govuk-visually-hidden">: Asda wood cleaner</span></a>
+                </li>
+            </ul>
         </div>
-        <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-                Updated
-            </dt>
-            <dd class="govuk-summary-list__value">
-                16 May 2022
-            </dd>
-        </div>
-    </dl>
-</li>
+    </li>
 </ul>
