--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -543,6 +543,7 @@ ul.opss-radio-list {
 }
 
 .opss-label-wrapper,
+.opss-label-wrapper label,
 .opss-fieldset__legend,
 div[class*="warning-text"] strong {
     max-width: none !important;
