3 edits for Firefox

--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -178,6 +178,7 @@ body.js-enabled .opss-nojs-hide {
 
     @include govuk-media-query($from: desktop) {
         display: block;
+        line-height: 0;
     }
 }
 
@@ -1002,6 +1003,12 @@ dl.opss-summary-list-aside {
         }
     }
 
+    div[class^='govuk-accordion'] & {
+        &>div {
+            display: table-row !important;
+        }
+    }
+
     @include govuk-media-query($from: desktop) {
         &.opss-summary-list-mixed--narrow-dt+.opss-text-align-right {
             position: relative;
@@ -1015,6 +1022,12 @@ dl.opss-summary-list-aside {
 
             dt+dd {
                 min-width: 50%;
+            }
+
+            @-moz-document url-prefix() {
+                dt+dd {
+                    min-width: 60%;
+                }
             }
         }
 
