Run stylelint --fix to bring spacing in line with GDS config

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -2,7 +2,7 @@
 $govuk-global-styles: true;
 
 // We can't mount GOV.UK Frontend's assets at root as it's done automatically by the extensions framework.
-$govuk-assets-path: '/govuk/assets/';
+$govuk-assets-path: "/govuk/assets/";
 
 // Import GOV.UK Frontend and any extension styles if extensions have been configured
 @import ".tmp/sass/extensions";
@@ -20,11 +20,8 @@ $govuk-assets-path: '/govuk/assets/';
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
 @import "components/product-thumbnails";
 
-
-
 //styles only for this prototype env - do not add to production, start:
-.strike {text-decoration: line-through; }
-
+.strike { text-decoration: line-through; }
 
 //styles for PSD and MSA
 @import "opss/opss-psd";
