--- a/app/assets/sass/patterns/_step-by-step-nav.scss
+++ b/app/assets/sass/patterns/_step-by-step-nav.scss
@@ -7,7 +7,7 @@ $number-circle-size: 26px;
 $number-circle-size-large: 35px;
 $top-border: solid 2px govuk-colour("mid-grey", $legacy: "grey-3");
 
-@mixin step-nav-vertical-line ($line-style: solid) {
+@mixin step-nav-vertical-line($line-style: solid) {
   content: "";
   position: absolute;
   z-index: 2;
@@ -32,7 +32,7 @@ $top-border: solid 2px govuk-colour("mid-grey", $legacy: "grey-3");
 // we want to ensure that both large and small step navs have the same size font on mobile
 // this will stop text resizing if compatibility mode is turned off
 @mixin step-nav-font($size, $tablet-size: $size, $weight: normal, $line-height: 1.3, $tablet-line-height: $line-height) {
-  @include govuk-typography-common();
+  @include govuk-typography-common;
   font-size: $size + px;
   font-weight: $weight;
   line-height: $line-height;
