--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -547,6 +547,7 @@ ul.opss-radio-list {
 .opss-fieldset__legend,
 div[class*="warning-text"] strong {
     max-width: none !important;
+    border: 1px solid lime;
 }
 
 section[data-info-number] {
