--- a/app/views/psd-revised-flow/help-how-to-use-psd.html
+++ b/app/views/psd-revised-flow/help-how-to-use-psd.html
@@ -1,7 +1,7 @@
 {% extends "layout-psd-menu_help.html" %}
 
 {% block pageTitle %}
-How to operate the Product Safety Database
+How to use the Product Safety Database
 {% endblock %}
 
 
