removed margin bottom class for edit links on imgs

--- a/app/views/psd-revised-flow/inc_tab-prod-imgs-sm-font.html
+++ b/app/views/psd-revised-flow/inc_tab-prod-imgs-sm-font.html
@@ -1,7 +1,7 @@
 <ul class="govuk-list govuk-!-margin-top-6">
     <li>
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-4 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image opss-summary-list-mixed--sm-font">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image opss-summary-list-mixed--sm-font">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Image and title
@@ -51,7 +51,7 @@
     </li>
     <li>
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-4 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image opss-summary-list-mixed--sm-font">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image opss-summary-list-mixed--sm-font">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Image and title
@@ -100,7 +100,7 @@
     </li>
     <li>
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-4 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image opss-summary-list-mixed--sm-font">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image opss-summary-list-mixed--sm-font">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Image and title
