--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -50,12 +50,12 @@ figcaption {
 // not normalised by gds library - ends
 
 @include govuk-media-query($from: desktop) {
-  .govuk-width-container > main.govuk-main-wrapper {
+  .govuk-width-container>main.govuk-main-wrapper {
     padding-top: govuk-spacing(8);
   }
 
-  .govuk-width-container > .govuk-breadcrumbs + main.govuk-main-wrapper,
-  .govuk-width-container > .govuk-back-link + main.govuk-main-wrapper {
+  .govuk-width-container>.govuk-breadcrumbs+main.govuk-main-wrapper,
+  .govuk-width-container>.govuk-back-link+main.govuk-main-wrapper {
     padding-top: govuk-spacing(2);
   }
 }
@@ -68,7 +68,8 @@ main.govuk-main-wrapper {
   @include govuk-clearfix;
 }
 
-#main-content > div > div div {
+#main-content>div>div div {
+
   .govuk-heading-xl,
   .govuk-heading-l {
     @include word-wrap;
@@ -111,24 +112,19 @@ h1.govuk-label-wrapper label.govuk-label--l {
 //   }
 // }
 
-main {
-  a.govuk-link:hover {
-    // recreate new hover styles of latest gds
-    text-decoration-skip-ink: none;
+//main {
+//a.govuk-link:hover {
+//text-decoration-skip-ink: none;
+//text-decoration: underline !important;
+//text-decoration-thickness: .1875rem !important;
+//text-decoration-thickness: .15em !important;
+//}
 
-    // text-decoration-thickness: max(3px, 0.1875rem, 0.12em); // fails build
-    // text-decoration-thickness: max(0.1875rem);
-
-    text-decoration: underline !important;
-    text-decoration-thickness: .1875rem !important;
-    text-decoration-thickness: .15em !important;
-  }
-
-  a.govuk-link:active {
-    text-decoration-thickness: 0 !important;
-    text-decoration: none !important;
-  }
-}
+//a.govuk-link:active {
+//text-decoration-thickness: 0 !important;
+//text-decoration: none !important;
+//}
+//}
 
 .opss-no-wrap {
   white-space: nowrap;
@@ -211,7 +207,7 @@ body.js-enabled .opss-nojs-hide {
 .opss-float-right {
   float: right;
 
-  & + .opss-float-right {
+  &+.opss-float-right {
     clear: right;
   }
 }
@@ -235,7 +231,7 @@ body.js-enabled .opss-nojs-hide {
   .opss-float-right-desktop {
     float: right;
 
-    & + .opss-float-right-desktop {
+    &+.opss-float-right-desktop {
       clear: right;
     }
   }
@@ -352,7 +348,7 @@ body.js-enabled .opss-nojs-hide {
     border-radius: 5px;
     padding-left: govuk-spacing(3);
 
-    .govuk-grid-column-one-quarter > & {
+    .govuk-grid-column-one-quarter>& {
       margin-right: govuk-spacing(7) + govuk-spacing(1) !important;
     }
 
@@ -383,7 +379,7 @@ body.js-enabled .opss-nojs-hide {
     @include opss-font-size($s: 16px, $l: 1.3);
   }
 
-  & + .opss-warning-text--s > span {
+  &+.opss-warning-text--s>span {
     display: none;
   }
 }
@@ -394,7 +390,7 @@ body.js-enabled .opss-nojs-hide {
   }
 }
 
-.opss-warning-text--s + .opss-warning-text--s.opss-warning-text--normal {
+.opss-warning-text--s+.opss-warning-text--s.opss-warning-text--normal {
   padding: govuk-spacing(0);
 }
 
@@ -402,10 +398,11 @@ abbr[title] {
   text-decoration: none;
 
   @include govuk-media-query($from: desktop) {
-    h1[class^="govuk-heading"] + p &,
-    h1.govuk-label-wrapper + div.govuk-hint &,
-    h1.govuk-label-wrapper + p &,
-    legend.govuk-fieldset__legend--l + p &,
+
+    h1[class^="govuk-heading"]+p &,
+    h1.govuk-label-wrapper+div.govuk-hint &,
+    h1.govuk-label-wrapper+p &,
+    legend.govuk-fieldset__legend--l+p &,
     .opss-switch-cols &,
     .govuk-summary-list__row &,
     .govuk-main-wrapper p & {
@@ -527,7 +524,7 @@ samp {
     column-count: 2;
     column-gap: 80px;
 
-    .opss-summary-list-mixed > div {
+    .opss-summary-list-mixed>div {
       break-inside: avoid-column;
     }
 
@@ -551,7 +548,7 @@ samp {
     column-count: 3;
     column-gap: govuk-spacing(3);
 
-    .opss-summary-list-mixed > div {
+    .opss-summary-list-mixed>div {
       break-inside: avoid-column;
     }
 
@@ -623,7 +620,7 @@ ul.opss-left-nav {
     margin-top: 0;
   }
 
-  & > li.opss-left-nav__active {
+  &>li.opss-left-nav__active {
     @include menu-inset-anchors;
   }
 
@@ -673,7 +670,7 @@ ul.opss-left-nav {
   //   padding-top: govuk-spacing(1); margin: govuk-spacing(4) 0 govuk-spacing(2) 0;
   // }
 
-  & > li:first-child {
+  &>li:first-child {
     padding-top: 5px;
   }
 
@@ -682,7 +679,7 @@ ul.opss-left-nav {
       padding-left: govuk-spacing(6);
     }
 
-    & > a {
+    &>a {
       font-weight: bold;
       margin-left: govuk-spacing(2);
     }
@@ -709,7 +706,7 @@ a.opss-secondary-text sup[class$="font-size-14"] {
   color: $govuk-secondary-text-colour;
 }
 
-div[class$="inset-text"] > ol li:last-child {
+div[class$="inset-text"]>ol li:last-child {
   margin-bottom: govuk-spacing(1);
 }
 
@@ -796,7 +793,7 @@ div[class$="inset-text"] > ol li:last-child {
       }
     }
 
-    &[open] > summary:before {
+    &[open]>summary:before {
       border-width: 10px 6px 0 !important;
     }
 
@@ -805,7 +802,7 @@ div[class$="inset-text"] > ol li:last-child {
 }
 
 .opss-details--plain {
-  & > div {
+  &>div {
     padding: govuk-spacing(3) 0;
     border-left: none;
   }
@@ -856,7 +853,7 @@ div[class$="inset-text"] > ol li:last-child {
     max-height: 110px;
   }
 
-  &.opss-details-img--thumbnail + .opss-img-caption {
+  &.opss-details-img--thumbnail+.opss-img-caption {
     max-width: 174px;
     white-space: nowrap;
     overflow: hidden;
@@ -864,7 +861,7 @@ div[class$="inset-text"] > ol li:last-child {
   }
 }
 
-section.govuk-grid-column-three-quarters div.govuk-grid-column-one-third > figure.opss-margin-bottom-1-desktop {
+section.govuk-grid-column-three-quarters div.govuk-grid-column-one-third>figure.opss-margin-bottom-1-desktop {
   max-height: 105px;
 
   // quick fix for smooth page loading on case products pg - when img height loads = zero pg movement
@@ -912,7 +909,7 @@ dl.opss-summary-list-aside {
     }
   }
 
-  dt + dd + dd + dd {
+  dt+dd+dd+dd {
     // image
     display: flex;
     flex-direction: column;
@@ -920,6 +917,7 @@ dl.opss-summary-list-aside {
   }
 
   @media only screen and (max-width: 600px) {
+
     dt,
     dd {
       @include govuk-font($size: 16);
@@ -955,7 +953,7 @@ dl.opss-summary-list-aside {
 .opss-summary-list-mixed {
 
   // this class was the solution for rows which did and didn't have action links, prior to GDS v4 and .opss-summary-list-mixed
-  & > div {
+  &>div {
     // std summary list but allows for a mixture of 2 & 3 cols in 1 list
     display: table;
     width: 100%;
@@ -965,7 +963,7 @@ dl.opss-summary-list-aside {
         width: 39%;
       }
 
-      dt + dd {
+      dt+dd {
         min-width: 40%;
         width: auto;
 
@@ -988,53 +986,54 @@ dl.opss-summary-list-aside {
       white-space: nowrap;
     }
 
-    & > span.govuk-summary-list__actions {
+    &>span.govuk-summary-list__actions {
       display: none !important;
     }
 
     // 2. protects against rogue legacy psd invalid html
 
-    dd br + span.opss-secondary-text,
-    dd ul li > span.opss-secondary-text:first-of-type {
+    dd br+span.opss-secondary-text,
+    dd ul li>span.opss-secondary-text:first-of-type {
       padding-left: govuk-spacing(0) !important;
     }
   }
 
   div[class^="govuk-accordion"] & {
-    & > div {
+    &>div {
       display: table-row !important;
     }
   }
 
   @include govuk-media-query($from: desktop) {
-    &.opss-summary-list-mixed--narrow-dt + .opss-text-align-right {
+    &.opss-summary-list-mixed--narrow-dt+.opss-text-align-right {
       position: relative;
       top: - govuk-spacing(7);
     }
 
-    &.opss-summary-list-mixed--narrow-dt > div {
+    &.opss-summary-list-mixed--narrow-dt>div {
       dt {
         width: 25%;
       }
 
-      dt + dd {
+      dt+dd {
         min-width: 50%;
       }
 
       @-moz-document url-prefix("") {
-        dt + dd {
+        dt+dd {
           min-width: 60%;
         }
       }
     }
 
-    &.opss-summary-list-mixed--narrow-actions > div {
+    &.opss-summary-list-mixed--narrow-actions>div {
       dd[class$="__actions"] {
         width: 10%;
       }
     }
 
-    &.opss-summary-list-mixed--compact > div {
+    &.opss-summary-list-mixed--compact>div {
+
       dt,
       dd {
         margin-top: 0;
@@ -1056,10 +1055,10 @@ dl.opss-summary-list-aside {
       border-bottom: none 0;
     }
 
-    & > div:first-child dt {
+    &>div:first-child dt {
       vertical-align: bottom;
 
-      & + dd {
+      &+dd {
         padding-right: govuk-spacing(0);
 
         figure {
@@ -1099,7 +1098,7 @@ dl.opss-summary-list-aside {
       width: inherit;
     }
 
-    &.opss-summary-list-mixed--narrow-actions > div {
+    &.opss-summary-list-mixed--narrow-actions>div {
 
       // firefox only: col flow bug
       dd[class$="__actions"] {
@@ -1139,6 +1138,7 @@ dl.opss-summary-list-aside {
       margin-bottom: govuk-spacing(7);
 
       div:last-child {
+
         dt,
         dd {
           border-bottom: none;
@@ -1149,6 +1149,7 @@ dl.opss-summary-list-aside {
 
   .opss-summary-list-mixed.opss-summary-list--equal-widths {
     div {
+
       dt,
       dd {
         width: 33%;
@@ -1175,7 +1176,7 @@ dl.opss-summary-list-aside {
 }
 
 .opss-summary-list-mixed.opss-summary-list-mixed--4-cols dd,
-.opss-summary-list-mixed.opss-summary-list-mixed--4-cols dd + dd {
+.opss-summary-list-mixed.opss-summary-list-mixed--4-cols dd+dd {
   width: 25%;
 }
 
@@ -1189,7 +1190,7 @@ dd dl.opss-nested-definition-list {
   margin: 0;
   @include opss-font-size($s: 16px, $l: 1.6);
 
-  & > div {
+  &>div {
     width: 100%;
   }
 
@@ -1221,7 +1222,7 @@ dd dl.opss-nested-definition-list {
   }
 
   @include govuk-media-query($from: desktop) {
-    & > div {
+    &>div {
       display: inline-block;
       width: 100%;
     }
@@ -1269,7 +1270,7 @@ dd dl.opss-nested-definition-list {
       font-weight: normal;
     }
 
-    & > dl {
+    &>dl {
       margin-bottom: 0;
 
       dt {
@@ -1282,7 +1283,7 @@ dd dl.opss-nested-definition-list {
     //   border-bottom: none;
     // }
 
-    & dl:last-of-type > div:last-child {
+    & dl:last-of-type>div:last-child {
       border-bottom: none;
     }
   }
@@ -1321,7 +1322,7 @@ dd dl.opss-nested-definition-list {
       display: flex;
       flex-direction: column;
 
-      & > .opss-full-height__col--bottom {
+      &>.opss-full-height__col--bottom {
         margin-top: auto;
       }
     }
@@ -1354,6 +1355,7 @@ dd dl.opss-nested-definition-list {
   }
 
   @include govuk-media-query($from: tablet) {
+
     thead tr th:first-child,
     tbody tr th:first-child {
       width: auto;
@@ -1363,6 +1365,7 @@ dd dl.opss-nested-definition-list {
 }
 
 .opss-table--last-col-right {
+
   thead tr .govuk-table__header:last-child,
   tbody tr .govuk-table__cell:last-child,
   tfoot tr .govuk-table__header:last-child {
@@ -1378,17 +1381,17 @@ dd dl.opss-nested-definition-list {
 
 .opss-table--2-row-groups {
   tbody tr:first-child {
-    & > * {
+    &>* {
       border-bottom: none 0;
     }
 
-    & + tr > * {
+    &+tr>* {
       border-bottom: 1px solid $govuk-border-colour;
     }
   }
 
-  tbody:last-of-type tr > th,
-  tbody:last-of-type tr > td {
+  tbody:last-of-type tr>th,
+  tbody:last-of-type tr>td {
     border-bottom: none 0;
   }
 }
@@ -1472,7 +1475,7 @@ dd dl.opss-nested-definition-list {
 
   // th[colspan="3"], tfoot th {padding-top: govuk-spacing(7); }
   tbody tr:first-child th,
-  tbody tr:not(:last-child) > *,
+  tbody tr:not(:last-child)>*,
   tfoot tr th {
     border-bottom: 0 none;
   }
@@ -1491,6 +1494,7 @@ dd dl.opss-nested-definition-list {
 
     // add horizontal lines to simple single rows table in one parent tbody
     tbody tr {
+
       th,
       td {
         border-bottom: 1px solid $govuk-border-colour;
@@ -1502,6 +1506,7 @@ dd dl.opss-nested-definition-list {
   }
 
   &.opss-table-items--sm {
+
     thead th,
     tfoot th {
       @include govuk-font($size: 16);
@@ -1545,7 +1550,8 @@ dd dl.opss-nested-definition-list {
 .opss-table,
 .opss-table-items {
   tbody td {
-    span > em,
+
+    span>em,
     mark {
       font-style: normal;
       font-weight: bold;
@@ -1557,6 +1563,7 @@ dd dl.opss-nested-definition-list {
 
 .opss-table-stripes {
   tbody tr {
+
     th,
     td {
       border-top: 1px solid govuk-colour("light-grey");
@@ -1565,6 +1572,7 @@ dd dl.opss-nested-definition-list {
 
   tbody tr:first-child,
   tbody tr:last-child {
+
     th,
     td {
       border-bottom: none;
@@ -1573,6 +1581,7 @@ dd dl.opss-nested-definition-list {
 
   &.opss-table-items--sm {
     tbody tr {
+
       th,
       td {
         padding-top: govuk-spacing(2);
