--- a/app/views/psd-revised-flow/design-assets-list.html
+++ b/app/views/psd-revised-flow/design-assets-list.html
@@ -431,6 +431,16 @@ List of page designs for revised PSD create a case journey
 
         </ul>
 
+        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+        <h2 class="govuk-heading-s">Revised inner home page</h2>
+
+        <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+            <li>
+                Inner home page: <a href="/psd-revised-flow/inner-home-page/home-01" class="govuk-link govuk-link--no-visited-state" target="_blank">home page 1</a>
+            </li>
+        </ul>
+
     </div>
 </div>
 
