--- a/app/views/psd-revised-flow/inner-home-page/home-01.html
+++ b/app/views/psd-revised-flow/inner-home-page/home-01.html
@@ -159,8 +159,10 @@ Home
         </div>
         <!-- ************* LEFT COL of STEPS ends ***************** -->
 
-        <p class="govuk-body-l govuk-!-margin-bottom-0">
-            <a href="[link to the All products-search page]" class="govuk-link govuk-link--no-visited-state govuk-!-display-inline-block">Search for the product</a>&nbsp;<svg class="govuk-button__start-icon govuk-!-margin-left-1" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+        <p class="govuk-body-l govuk-!-margin-bottom-0 opss-padding-bottom-4-mobile">
+            <a href="[link to the All products-search page]" class="govuk-link govuk-link--no-visited-state govuk-!-display-inline-block">
+                Search for the product
+            </a>&nbsp;<svg class="govuk-button__start-icon govuk-!-margin-left-1 opss-keep-for-desktop" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
                 <path fill="#1d70b8" d="M0 0h13l20 20-20 20H0l20-20z"></path>
             </svg>
         </p>
@@ -272,7 +274,7 @@ Home
                         </p>
 
                         <p class="govuk-body-s govuk-!-margin-bottom-1">
-                            In the products page for a case, <span class="govuk-!-font-weight-bold">all the cases which have also included the same product record</span> are shown. To view these, select the 'Cases' tab (in the body of the case products page).
+                            In the products page for a case, <span class="govuk-!-font-weight-bold">all the cases which have also included the product record</span> are shown. To view these, select the 'Cases' tab (in the body of the case products page).
                         </p>
                     </div>
 
@@ -287,7 +289,7 @@ Home
 
 <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
 
-<div class="govuk-grid-row">
+<section class="govuk-grid-row">
     <div class="govuk-grid-column-one-quarter">
         <h2 class="govuk-heading-m">
             <a class="govuk-link govuk-link--no-visited-state" href="/cases/your-cases">Your cases</a>
@@ -305,19 +307,19 @@ Home
 
     <div class="govuk-grid-column-one-quarter">
         <h2 class="govuk-heading-m">
-            <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/help-how-to-use-psd" target="_blank" rel="noreferrer noopener">How to use the <abbr>PSD</abbr> <span class="govuk-visually-hidden">(Opens in a new tab)</span></a>
-        </h2>
-
-        <p class="govuk-body">How to use this digital service. <br class="opss-br-desktop"><span class="opss-secondary-text opss-font-size-14">(Opens in a new tab).</p>
-    </div>
-
-    <div class="govuk-grid-column-one-quarter">
-        <h2 class="govuk-heading-m">
             <a class="govuk-link govuk-link--no-visited-state" href="https://www.gov.uk/guidance/notification-of-unsafe-and-noncompliant-products" target="_blank" rel="noreferrer noopener">Guidance <span class="govuk-visually-hidden">(Opens in a new tab)</span></a>
         </h2>
 
         <p class="govuk-body">When to use the <abbr>PSD</abbr>. <br class="opss-br-desktop"><span class="opss-secondary-text opss-font-size-14">(Opens in a new tab).</span></p>
     </div>
-</div>
+
+    <div class="govuk-grid-column-one-quarter">
+        <h2 class="govuk-heading-m">
+            <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/help-how-to-use-psd" target="_blank" rel="noreferrer noopener">How to use the <abbr>PSD</abbr> <span class="govuk-visually-hidden">(Opens in a new tab)</span></a>
+        </h2>
+
+        <p class="govuk-body">How to use this digital service. <br class="opss-br-desktop"><span class="opss-secondary-text opss-font-size-14">(Opens in a new tab).</p>
+    </div>
+</section>
 
 {% endblock %}
