additional home page layout

--- a/app/views/psd-revised-flow/inner-home-page/home-02.html
+++ b/app/views/psd-revised-flow/inner-home-page/home-02.html
@@ -26,7 +26,7 @@ Home
 
 <section class="govuk-grid-row opss-equal-height-container opss-equal-height-container--flush">
 
-    <div class="govuk-grid-column-one-half opss-equal-height__col">
+    <div class="govuk-grid-column-two-thirds opss-equal-height__col">
 
         <div class="opss-equal-height-container__panel-1">
             <div class="opss-colour-block-title opss-colour-block-title--blue">
@@ -169,7 +169,7 @@ Home
 
     </div>
 
-    <div class="govuk-grid-column-one-half opss-equal-height__col">
+    <div class="govuk-grid-column-one-third opss-equal-height__col">
 
         <div class="opss-equal-height-container__panel-1">
             <div class="opss-colour-block-title opss-colour-block-title--blue">
@@ -184,7 +184,7 @@ Home
         </div>
 
         <!-- ************* RIGHT COL of STEPS starts ***************** -->
-        <div class="opss-step-nav opss-step-nav--large">
+        <div class="opss-step-nav">
             <ol class="opss-step-nav__steps">
                 <li class="opss-step-nav__step">
 
