included mixin for steps

--- a/app/views/psd-revised-flow/design-assets-list.html
+++ b/app/views/psd-revised-flow/design-assets-list.html
@@ -437,7 +437,7 @@ List of page designs for revised PSD create a case journey
 
         <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
             <li>
-                Inner home page: <a href="/psd-revised-flow/inner-home-page/home-01" class="govuk-link govuk-link--no-visited-state" target="_blank">home page 1</a>
+                Inner home page: <a href="/psd-revised-flow/inner-home-page/home-02" class="govuk-link govuk-link--no-visited-state" target="_blank">home page</a>
             </li>
         </ul>
 
