--- a/app/assets/sass/opss/_opss-step-by-step-nav.scss
+++ b/app/assets/sass/opss/_opss-step-by-step-nav.scss
@@ -2,7 +2,19 @@ $stroke-width: 2px;
 $stroke-width-large: 3px;
 $number-circle-size: 26px;
 $number-circle-size-large: 35px;
-$top-border: solid 2px $govuk-border-colour;
+$top-border: solid 2px $govuk-border-colour; 
+
+@mixin step-nav-font($size, $tablet-size: $size, $weight: normal, $line-height: 1.3, $tablet-line-height: $line-height) {
+  font-family: $std-font-family;
+  font-size: $size + px;
+  font-weight: $weight;
+  line-height: $line-height;
+
+  @include govuk-media-query($from: tablet) {
+    font-size: $tablet-size + px;
+    line-height: $tablet-line-height;
+  }
+}
 
 @mixin step-nav-vertical-line($line-style: solid) {
   content: "";
